force-app/main/default/objects/Procedure__c/Procedure__c.object-meta.xml
<CustomObject>
    <label>Procedure</label>
    <nameField>
        <label>Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procedure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>