force-app/main/default/objects/Procedure__c/fields/AdminFieldsJson__c.field-meta.xml
<CustomField>
    <fullName>AdminFieldsJson__c</fullName>
    <label>Admin Fields JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>