force-app/main/default/objects/Procedure__c/fields/DefaultNextProcedure__c.field-meta.xml
<CustomField>
    <fullName>DefaultNextProcedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Next Procedure</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Procedure</relationshipLabel>
    <relationshipName>Procedure</relationshipName>
    <type>Lookup</type>
</CustomField>