force-app/main/default/objects/Procedure__c/fields/Details_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Details_Field_API_Name__c</fullName>
    <label>Details Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>