force-app/main/default/objects/Procedure__c/fields/Details_Type__c.field-meta.xml
<CustomField>
    <fullName>Details_Type__c</fullName>
    <label>Details Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Details Needed</fullName>
                <default>true</default>
                <label>No Details Needed</label>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>