force-app/main/default/objects/Procedure__c/fields/IsMachineInfoRequired__c.field-meta.xml
<CustomField>
    <fullName>IsMachineInfoRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Machine Information Required</label>
    <type>Checkbox</type>
</CustomField>