force-app/main/default/objects/Procedure__c/fields/MachineSkills__c.field-meta.xml
<CustomField>
    <fullName>MachineSkills__c</fullName>
    <label>Machine Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asset_Skill</valueSetName>
    </valueSet>
</CustomField>