force-app/main/default/objects/Procedure__c/fields/ProductionFieldsJson__c.field-meta.xml
<CustomField>
    <fullName>ProductionFieldsJson__c</fullName>
    <label>Production Fields JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>