force-app/main/default/objects/Procedure__c/validationRules/Field_API_Name_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_API_Name_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Details_Type__c , &apos;Field&apos;),
  ISBLANK(Details_Field_API_Name__c)
)</errorConditionFormula>
    <errorDisplayField>Details_Field_API_Name__c</errorDisplayField>
    <errorMessage>A Field  API Name is required if the Details Type is &quot;Field&quot;</errorMessage>
</ValidationRule>