force-app/main/default/objects/Procedure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Details_Type__c</columns>
    <columns>Details_Field_API_Name__c</columns>
    <columns>DefaultNextProcedure__c</columns>
    <columns>MachineSkills__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>